aau/sf_autobackup/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Academic_Action_Date__c</fullName>
        <label>Academic Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Academic_Admit_Term__c</fullName>
        <label>Academic Admit Term</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Career__c</fullName>
        <label>Academic Career</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Cumulative_GPA__c</fullName>
        <label>Academic Cumulative GPA</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Academic_Expected_Grade_Term__c</fullName>
        <label>Academic Expected Grade Term</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Plan__c</fullName>
        <label>Academic Plan</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Program_Action__c</fullName>
        <label>Academic Program Action</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Program_Reason__c</fullName>
        <label>Academic Program Reason</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Program_Status__c</fullName>
        <label>Academic Program Status</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Program__c</fullName>
        <label>Academic Program</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Requirement_Term__c</fullName>
        <label>Academic Requirement Term</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Sub_Plan__c</fullName>
        <label>Academic Sub Plan</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Units_Completed__c</fullName>
        <label>Academic Units Completed</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advisor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads/Contacts (Advisor)</relationshipLabel>
        <relationshipName>Leads_Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Postal__c</fullName>
        <label>Billing Postal</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Address__c</fullName>
        <label>Business Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_City__c</fullName>
        <label>Business City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Country__c</fullName>
        <label>Business Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Email__c</fullName>
        <label>Business Email</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Phone_Country_Code__c</fullName>
        <label>Business Phone Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Phone_Number__c</fullName>
        <label>Business Phone Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Postal__c</fullName>
        <label>Business Postal</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_State__c</fullName>
        <label>Business State</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Aid_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Aid Advisor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads/Contacts (Financial Aid Advisor)</relationshipLabel>
        <relationshipName>Leads_Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Home_Email__c</fullName>
        <label>Home Email</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Student__c</fullName>
        <formula>IF($User.Username =  Student_User__r.Username, &apos;yes&apos;, &apos;no&apos;)</formula>
        <label>Is Student</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <label>Mailing Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Postal__c</fullName>
        <label>Mailing Postal</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <label>Mailing State</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Address__c</fullName>
        <label>Other Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Permanent_Address__c</fullName>
        <label>Permanent Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Permanent_City__c</fullName>
        <label>Permanent City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permanent_Country__c</fullName>
        <label>Permanent Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permanent_Postal__c</fullName>
        <label>Permanent Postal</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permanent_State__c</fullName>
        <label>Permanent State</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_First_Name__c</fullName>
        <label>Preferred First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Last_Name__c</fullName>
        <label>Preferred Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone__c</fullName>
        <label>Preferred Phone</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Effective_Status__c</fullName>
        <label>Program Effective Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link Student User to their Contact to grab Class Schedule, etc.</description>
        <inlineHelpText>Link Student User to their Contact to grab Class Schedule, etc.</inlineHelpText>
        <label>Student User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>